--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -6,19 +6,55 @@ $white:#ffffff;
 $darkgray:#333333;
 $rightgray:#999999;
 
-.sidebar {
+.side-bar {
   width: 300px;
   height: 100vh;
   float: left;
-  &__username{
+  color: white;
+  a{
+    color: $white;
+    text-decoration: none;
+  }
+  .header{
     background-color: #253141;
     height: 100px;
     display: flex;
     align-items: center;
+    padding: 0 20px;
+    &__box {
+      display: flex;
+      justify-content: space-between;
+      width: 100%;
+      font-weight: bold;
+      &__name{
+        height: 100px;
+        align-items: center;
+        display: flex;
+        font-size: 16px;
+        color: $white;
+        font-weight: bold;
+      }
+      &__lists {
+        padding-top:40px;
+        height: 20px;
+        display: flex;
+        line-height: 20px;
+        li{
+          .fa-edit{
+            padding-right: 5px;
+          }
+        }
+      }
+    }
   }
-  &__grouplist{
+  .groups{
     background-color: #2f3e51;
     height: calc(100vh - 100px);
+    padding: 20px 20px 0;
+    overflow: scroll;
+    .group {
+      margin-bottom: 40px;
+    }
   }
 }
 
@@ -26,140 +62,79 @@ $rightgray:#999999;
   float: right;
   width: calc(100vw - 300px);
   height: 100vh;
+
   &__groupinfo{
     background-color: $white;
     height: 100px;
-  }
-  &__messagelist{
-    background-color: #fafafa;
-    height: calc(100vh - 100px - 90px);
-  }
-  &__messageform{
-    background-color: #d2d2d2;
-    height: 90px;
-  }
-}
-
-.sidebar__topitems {
-  height: 20px;
-  width: 260px;
-  margin: 0 20px;
-  display: flex;
-  justify-content: space-between;
-  line-height: 20px;
-  &__name{
-    font-size: 16px;
-    color: $white;
-    font-weight: bold;
-  }
-  &__icons{
-    display: flex;
-    li{
-      a{
-        color: $white;
+    .current__group{
+      display: flex;
+      justify-content: space-between;
+      margin: 0 40px;
+      padding-top: 35px;
+      &__name{
+        font-size: 20px;
+        color: $darkgray;
       }
-      .edit--icon{
-        padding-right: 5px;
+      &__member__list{
+        margin-top: 15px;
+        color: $rightgray;
+        font-size: 12px;
+        display: flex;
+      }
+      .edit__btn {
+        width: 72px;
+        height: 40px;
+        line-height: 40px;
+        text-align: center;
+        font-size: 16px;
+        border: solid 1px #38aef0;
+        a{
+          color: #38aef0;
+          text-decoration: none;
+        }
       }
     }
   }
-}
-
-.sidebar__grouplist{
-  color: $white;
-  font-weight: bold;
-  &__name {
-    font-size: 15px;
-    padding: 20px 20px 5px 20px;
+  .messages{
+    background-color: #fafafa;
+    height: calc(100vh - 190px);
+    padding: 46px 40px;
+    overflow: scroll;
   }
-  &__message{
-    font-size: 11px;
-    padding: 0 20px 20px 20px;
-  }
-}
-
-.current__group{
-  display: flex;
-  justify-content: space-between;
-  margin: 0 40px;
-  padding-top: 35px;
-  &__name{
-    font-size: 20px;
-    color: $darkgray;
-  }
-  &__member__list{
-    margin-top: 15px;
-    color: $rightgray;
-    font-size: 12px;
-    display: flex;
-  }
-}
-.edit__btn {
-  width: 72px;
-  height: 40px;
-  line-height: 40px;
-  text-align: center;
-  font-size: 16px;
-  border: solid 1px #38aef0;
-  a{
-    color: #38aef0;
-    text-decoration: none;
-  }
-}
-
-.message{
-  padding-top: 35px;
-  padding-left: 40px;
-  &__name{
-    color: $darkgray;
-    font-size: 16px;
-    display: flex;
-    font-weight: bold;
-  }
-  &__date{
-    color: $rightgray;
-    font-size: 12px;
-    padding-left: 12px;
-    font-weight: normal;
-  }
-  &__text{
-    color: #434a54;
-    font-size: 14px;
-    padding-top: 12px;
-    padding-bottom: 11px;
-  }
-}
-
-form{
-  display: flex;
-  padding: 20px 40px;
-  .input__box{
-    width: 100%;
-    position: relative;
-    &__text{
+  .form{
+    background-color: #ddd;
+    height: 90px;
+    padding: 20px 40px;
+    .new_message{
+      display:flex;
+    }
+    &__message{
       height: 50px;
-      width: 100%;
+      width: calc(100% - 100px);
       border-style: none;
       padding-left: 10px;
-      padding-right: 40px;
     }
-    &__image{
-      position: absolute;
-      top: 15px;
-      right: 10px;
-      cursor: pointer;
-      &__file{
-        display: none;
-      }
+    &__submit{
+      margin-left: 15px;
+      height: 50px;
+      width: 100px;
+      padding: 0 30px;
+      background-color: #38aef0;
+      color: $white;
+      border-style: none;
+    }
+    .form__mask{
+      position: relative;
+      display: flex;
+      &__image{
+        font-size: 1.3rem;
+        position: absolute;
+        top: 10px;
+        right: 10px;
+      } 
     }
   }
-  .submit__btn{
-    margin-left: 15px;
-    height: 50px;
-    width: 100px;
-    padding: 0 30px;
-    background-color: #38aef0;
-    color: $white;
-    cursor: pointer;
-  }
+}
+.hidden{
+  display:none;
 }
