--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -2,43 +2,25 @@
   .mainchat__groupinfo
     .current__group
       %h2.current__group__name
-        teamA
+        = @group.name
         %ul.current__group__member__list
           Member : 
           %li
-            hiroshi
+            - @group.users.each do |user| 
+              = user.name
+
       .edit__btn
-        =link_to "#" do
+        =link_to edit_group_path(@group) do
           Edit
 
-  .mainchat__messagelist
-    .message
-      %h3.message__name
-        hiroshi
-        %p.message__date
-          2020/1/1(wed) 11:11:11
-      .message__text
-        アフターコロナ
-    .message
-      %h3.message__name
-        hiroshi
-        %p.message__date
-          2020/1/1(wed) 12:12:12
-      .message__text
-        今年もよろしくお願いします
-    .message
-      %h3.message__name
-        hiroshi
-        %p.message__date
-          2020/1/1(wed) 13:13:13
-      .message__text
-        ウィズコロナ
+  .messages
+    = render @messages
 
-  .mainchat__messageform
-    %form.new__message
-      .input__box
-        %input{type: "text", class: "input__box__text", placeholder: "type a message"}
-        %label{class: "input__box__image"}
-          = icon('far', 'image')
-          %input{type: "file", class: "input__box__image__file"}
-      %input{type: "submit", class: "submit__btn", value: "Send"} 
+  .form
+    = form_for [@group, @message] do |f|
+      = f.text_field :content, class: 'form__message', placeholder: 'type a message'
+      .form__mask
+        = f.label :image, class: 'form__mask__image' do
+          = icon('fas', 'image', class: 'icon')
+          = f.file_field :image, class: 'hidden'
+      = f.submit 'Send', class: 'form__submit'
